--- a/Mobile.css
+++ b/Mobile.css
@@ -4,26 +4,30 @@
 {
     width: inherit;
     float:none;
-    min-height: 200pt;
+    min-height: 500pt;
+    overflow: auto;
 }
 #Left
 {
-    text-align: center;
-    align-content: space-around;
-    float: none;
-    min-width: 100%;
+    text-align: left;
+    align-content: stretch;
+    float: inherit;
+    width: 100%;
+    overflow: auto;
 }
 #Center
 {
     text-align: center;
     align-content: space-around;
-    float: none;
-    min-width: 100%;
+    float: inherit;
+    width: 100%;
+    overflow: auto;
 }
 #Right
 {
-    text-align: center;
+    text-align: right;
     align-content: space-around;
-    float: none;
-    min-width: 100%;
+    float: inherit;
+    width: 100%;
+    overflow: auto;
 }
