--- a/Tablet.css
+++ b/Tablet.css
@@ -1,29 +1,33 @@
 @charset "UTF-8";
 
-Middle
+#Middle
 {
     width: inherit;
     float:none;
-    min-height: 200pt;
+    min-height: 500pt;
+    overflow: auto;
 }
 #Left
 {
     text-align: left;
-    align-content: flex-start;
+    align-content: stretch;
     float: left;
-    min-width: 30%;
+    width: 30%;
+    overflow: auto;
 }
 #Center
 {
     text-align: center;
     align-content: space-around;
     float: none;
-    min-width: 70%;
+    width: 70%;
+    overflow: auto;
 }
 #Right
 {
-    text-align: center;
+    text-align: right;
     align-content: space-around;
-    float: left;
-    min-width: 100%;
+    float: right;
+    width: 100%;
+    overflow: auto;
 }
